[tool.poetry]
name = "concrete"
version = "0.1.0"
description = "Backend for Pegboard application"
authors = ["Elran Shefer <elran777@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"
uvicorn = {extras = ["standard"], version = "^0.13.3"}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
pytest = "^6.2.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "concrete.main:run_application"
